tests/negative/typecheck/call.orng
// call.orng:7:18: error: expected a value of type `Bool`, got a value of type `Int`
// fn f()->Bool {'d'}
//                 ^
// 
fn main() -> Int {f()}

fn f()->Bool {'d'}